Configuração do application propierties realizada.

--- a/Stockeasy/src/main/resources/application.properties
+++ b/Stockeasy/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Stockeasy
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/Stockeasy
+spring.datasource.username=${USERNAME_BANCO}
+spring.datasource.password=${SENHA_BANCO}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
