--- a/Stockeasy/src/main/resources/application.properties
+++ b/Stockeasy/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=${SENHA_BANCO}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+
+api.security.token.secret = ${SECRET_JWT}
