--- a/Stockeasy/src/main/resources/application.properties
+++ b/Stockeasy/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.username=${USERNAME_BANCO}
 spring.datasource.password=${SENHA_BANCO}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
 
 api.security.token.secret = ${SECRET_JWT}
