Migrations criadas e projeto FINALIZADO

--- a/Stockeasy/src/main/resources/application.properties
+++ b/Stockeasy/src/main/resources/application.properties
@@ -3,8 +3,12 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/Stockeasy
 spring.datasource.username=${USERNAME_BANCO}
 spring.datasource.password=${SENHA_BANCO}
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
